--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Redux Basics - Counter</title>
   </head>
   <body>
-    <h1>0</h1>
-    <button>-</button>
-    <button>+</button>
+    <h1 data-js="counter"></h1>
+    <button data-js="decrement">-</button>
+    <button data-js="increment">+</button>
+
+    <script src="//unpkg.com/redux@latest/dist/redux.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
